--- a/index.html
+++ b/index.html
@@ -1,62 +1,282 @@
+<!-- https://demo.w3layouts.com/demos_new/template_demo/01-12-2017/housing-demo_Free/524021621/web/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="/node_modules/owl.carousel/dist/assets/owl.carousel.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="/bower_components/owl.carousel/dist/assets/owl.carousel.min.css"
-    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
+      integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Housing</title>
   </head>
   <body>
     <header class="header">
-      <div class="header__container">
-        <div class="header__logo">
-          <a href="">
-            Hous
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">
+          <span class="lead">
+            <span>Hous</span>
             <span style="color: aqua">ing</span>
-          </a>
+          </span>
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="ml-auto navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#blog">Blog</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#agents">Agents</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
         </div>
-        <nav class="header__nav">
-          <a href="#">Home</a>
-          <a href="#about">About</a>
-          <a href="#blog">Blog</a>
-          <a href="#portfolio">Portfolio</a>
-          <a href="#agents">Agents</a>
-          <a href="#contact">Contact</a>
-        </nav>
-      </div>
+      </nav>
     </header>
 
-    <section class="carousel">
-      <div class="owl-carousel owl-theme">
-        <img src="./images/b1.jpg" />
-        <img src="./images/b2.jpg" />
-        <img src="./images/b3.jpg" />
-        <img src="./images/b4.jpg" />
+    <section class="slider">
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-ride="carousel"
+      >
+        <ol class="carousel-indicators">
+          <li
+            data-target="#carouselExampleCaptions"
+            data-slide-to="0"
+            class="active"
+          ></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+        </ol>
+
+        <div class="carousel-inner carousel-fade">
+          <div class="carousel-item active">
+            <img src="./images/b1.jpg" class="d-block w-100" />
+            <div class="carousel-caption d-none d-md-block">
+              <h1>LOREM IPSUM AMET</h1>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/b2.jpg" class="d-block w-100" />
+            <div class="carousel-caption d-none d-md-block">
+              <h1>DOLOR SIT HATANT MORBI</h1>
+              <p>Quis autem vel eum iure reprehenderit quivol.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/b3.jpg" class="d-block w-100" />
+            <div class="carousel-caption d-none d-md-block">
+              <h1>QUIS AUTEM VE EUM IURE</h1>
+              <p>Excepteur sint ocecat cupid proident, deserunt.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./images/b4.jpg" class="d-block w-100" />
+            <div class="carousel-caption d-none d-md-block">
+              <h1>VOLUPTATE VELIT ESSE</h1>
+              <p>Quis autem velreprehenderit qui ea.eum iure</p>
+            </div>
+          </div>
+        </div>
+        <a
+          class="carousel-control-prev"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a
+          class="carousel-control-next"
+          href="#carouselExampleCaptions"
+          role="button"
+          data-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </section>
 
-    <section class="about" id="about"></section>
-    <section class="statistic"></section>
-    <section class="blog" id="blog"></section>
+    <section class="about" id="about">
+      <div class="container text-center mt-5">
+        <h1 class="mb-5">About</h1>
+        <div class="d-flex justify-content-around about__top__list">
+          <div>
+            <i class="fa fa-home"></i>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div>
+            <i class="fa fa-key"></i>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              labore et dolore magna aliqua.
+            </p>
+          </div>
+          <div>
+            <i class="fa fa-money-bill"></i>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              labore et dolore magna aliqua.
+            </p>
+          </div>
+        </div>
+        <div class="about__bottom">
+          <h1>About us</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed
+            odio consequat, tristique elit sed, molestie nulla. Mauris et quam
+            leo. Quisque tincidunt facilisis rutrum. Etiam mattis arcu vitae
+            velit sagittis vehicula. Duis posuere ex in mollis iaculis.
+            Suspendisse tincidunt ut velit id euismod.vulputate turpis porta ex
+            sodales, dignissim hendrerit eros sagittis. Curabitur lacinia dui ut
+            luctus congue. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Cras quis
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="statistic">
+      <div class="container">
+        <h1>Stats</h1>
+        <div class="d-flex justify-content-around align-items-center">
+          <div class="statistic__item">
+            <h1>3500</h1>
+            <p>clients</p>
+          </div>
+          <div class="statistic__item">
+            <h1>650</h1>
+            <p>Plans</p>
+          </div>
+          <div class="statistic__item">
+            <h1>1021</h1>
+            <p>projects</p>
+          </div>
+          <div class="statistic__item">
+            <h1>1010</h1>
+            <p>Likes</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="blog mb-5" id="blog">
+      <div class="container d-flex justify-content-around align-items-center">
+        <div class="text-center mt-5">
+          <h1>Blog</h1>
+          <div class="d-flex justify-content-around align-items-center">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="./images/g1.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn">Read more...</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="./images/g2.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn">Read more...</a>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="./images/g1.jpg"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn">Read more...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="video"></section>
     <section class="portfolio" id="portfolio"></section>
     <section class="subscribe"></section>
     <section class="agents" id="agents"></section>
     <section class="contact" id="contact"></section>
     <footer class="footer"></footer>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
