housing-web done

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <div
           class="d-flex flex-wrap justify-content-around align-items-center portfolio__list"
         >
-          <div class="portfolio__item">
+          <div class="portfolio__item d-block">
             <img src="./images/img1.jpg" alt="" />
             <div>
               <hr noshade="1" color="#00cdce" size="5px" width="100%" />
@@ -314,7 +314,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-          <div class="portfolio__item">
+          <div class="portfolio__item d-block">
             <img src="./images/img2.jpg" alt="" />
             <div>
               <hr noshade="1" color="#00cdce" size="5px" width="100%" />
@@ -323,7 +323,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-          <div class="portfolio__item">
+          <div class="portfolio__item d-block">
             <img src="./images/img3.jpg" alt="" />
             <div>
               <hr noshade="1" color="#00cdce" size="5px" width="100%" />
@@ -332,7 +332,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-          <div class="portfolio__item">
+          <div class="portfolio__item d-block">
             <img src="./images/img4.jpg" alt="" />
             <div>
               <hr noshade="1" color="#00cdce" size="5px" width="100%" />
@@ -341,7 +341,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-          <div class="portfolio__item">
+          <div class="portfolio__item d-block">
             <img src="./images/img5.jpg" alt="" />
             <div>
               <hr noshade="1" color="#00cdce" size="5px" width="100%" />
@@ -350,7 +350,7 @@
               <p>Lorem ipsum dolor sit amet.</p>
             </div>
           </div>
-          <div class="portfolio__item">
+          <div class="portfolio__item d-block">
             <img src="./images/img6.jpg" alt="" />
             <div>
               <hr noshade="1" color="#00cdce" size="5px" width="100%" />
@@ -388,51 +388,59 @@
           class="agents__list d-flex justify-content-around align-items-center flex-wrap"
         >
           <div class="agents__item">
-            <img src="./images/t1.jpg" alt="" />
-            <div class="agents__item__content">
-              <h2>KAT WALLY</h2>
-              <p>Lorem ipsum</p>
-              <p>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fa fa-rss"></i>
-              </p>
+            <div class="agents__item__details">
+              <img src="./images/t1.jpg" alt="" />
+              <div class="agents__item__content">
+                <h2>KAT WALLY</h2>
+                <p>Lorem ipsum</p>
+                <p>
+                  <i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-twitter"></i>
+                  <i class="fa fa-rss"></i>
+                </p>
+              </div>
             </div>
           </div>
           <div class="agents__item">
-            <img src="./images/t4.jpg" alt="" />
-            <div class="agents__item__content">
-              <h2>JOHN MAX</h2>
-              <p>Lorem ipsum</p>
-              <p>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fa fa-rss"></i>
-              </p>
+            <div class="agents__item__details">
+              <img src="./images/t4.jpg" alt="" />
+              <div class="agents__item__content">
+                <h2>JOHN MAX</h2>
+                <p>Lorem ipsum</p>
+                <p>
+                  <i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-twitter"></i>
+                  <i class="fa fa-rss"></i>
+                </p>
+              </div>
             </div>
           </div>
           <div class="agents__item">
-            <img src="./images/t2.jpg" alt="" />
-            <div class="agents__item__content">
-              <h2>ROY KENT</h2>
-              <p>Lorem ipsum</p>
-              <p>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fa fa-rss"></i>
-              </p>
+            <div class="agents__item__details">
+              <img src="./images/t2.jpg" alt="" />
+              <div class="agents__item__content">
+                <h2>ROY KENT</h2>
+                <p>Lorem ipsum</p>
+                <p>
+                  <i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-twitter"></i>
+                  <i class="fa fa-rss"></i>
+                </p>
+              </div>
             </div>
           </div>
           <div class="agents__item">
-            <img src="./images/t3.jpg" alt="" />
-            <div class="agents__item__content">
-              <h2>JOY IDSON</h2>
-              <p>Lorem ipsum</p>
-              <p>
-                <i class="fab fa-facebook-f"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fa fa-rss"></i>
-              </p>
+            <div class="agents__item__details">
+              <img src="./images/t3.jpg" alt="" />
+              <div class="agents__item__content">
+                <h2>JOY IDSON</h2>
+                <p>Lorem ipsum</p>
+                <p>
+                  <i class="fab fa-facebook-f"></i>
+                  <i class="fab fa-twitter"></i>
+                  <i class="fa fa-rss"></i>
+                </p>
+              </div>
             </div>
           </div>
         </div>
